feat(config): 默认 providers 从 5 个精简为 1 个占位